tests/integration/snapshots/integration__conformance__n_array_star_inside.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[*]
stdout ---

stderr ---
error: unexpected character `*`. expected start of a json value
 --> stdin:1:2
  |
1 | [*]
  |  ^
