tests/integration/snapshots/integration__conformance__n_array_unclosed_trailing_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[1,
stderr ---
error: expected json value, found no significant characters
 --> stdin:1:3
  |
1 | [1,
  |   ^
  |   |
  |   expected due to `,`
  |
help: insert a placeholder value
  |
1 | [1, "rust is a must"
  |     ++++++++++++++++
