tests/integration/snapshots/integration__conformance__n_incomplete_null.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[nul]
stdout ---

stderr ---
error: unexpected character `n`. expected start of a json value
 --> stdin:1:2
  |
1 | [nul]
  |  ^
